[package]
name = "jvm_utils"
version = "0.1.0"
edition = "2021"

[features]
log = ["dep:log"]

[dependencies]
dirs = "6.0.0"
log = { version = "0.4.25", optional = true, features = ["std"] }
num_enum = "0.7.3"
regex = "1.11.1"
tempfile = "3.17.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
