[package]
name = "jvm_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "jvm_utils"
path = "src/lib.rs"

[[bin]]
name = "jvm_utils"
path = "src/main.rs"
required-features = ["cli"]

[features]
# No defaults
default = []
# Enable logging
logging = ["log"]
# Serialization
serde = ["dep:serde"]
serde_json = ["serde", "dep:serde_json"]
# Enable the provisioning api
provisioning = ["dep:ureq", "serde_json", "dep:rand", "dep:mvn_version", "dep:pathdiff", "dep:zip", "dep:flate2", "dep:tar", "dep:sha2"]
# Enable the cli
cli = ["logging", "dep:clap", "dep:env_logger", "serde_json", "provisioning"]

[dependencies]
# Dependencies required for the library to operate.
dirs = "6.0.0"
num_enum = "0.7.3"
regex = "1.11.1"
tempfile = "3.17.1"

# Optional, may be enabled if required.
log = { version = "0.4.25", optional = true, features = ["std"] }
serde = { version = "1.0.218", optional = true, features = ["derive"] }
serde_json = { version = "1.0.139", optional = true }

#Provisioning
ureq = { version = "3.0.6", optional = true, features = ["json"] }
rand = { version = "0.9.0", optional = true }
mvn_version = { version = "0.1.0", optional = true }
pathdiff = { version = "0.2.3", optional = true }
zip = { version = "2.2.2", optional = true, default-features = false, features = ["deflate", "deflate64", "time"] }
flate2 = { version = "1.0.35", optional = true }
tar = { version = "0.4.43", optional = true }
sha2 = { version = "0.10.8", optional = true, features = ["asm", "asm-aarch64"] }

# Required for the cli
clap = { version = "4.5.30", optional = true, features = ["derive"] }
env_logger = { version = "0.11.6", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
